--- a/raw/mock_exam/docs/questions/question-39.adoc
+++ b/raw/mock_exam/docs/questions/question-39.adoc
@@ -18,7 +18,7 @@ Wählen Sie die DREI am besten passenden Antworten aus.
 
 | {y}
 | (a)
-a| Größe der Bausteine (z.{nbsp}B. Lines-of-Code).
+| Größe der Bausteine (z.{nbsp}B. Lines-of-Code).
 
 | {y}
 | (b)
